--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "event-sky",
-  "version": "0.1.4",
+  "version": "0.0.0-development",
   "description": "front-end event pub/sub utility",
-  "main": "eventSky.js",
+  "main": "build.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c",
+    "dev": "rollup -c --watch",
+    "test": "echo \"Test: no test specified\" && exit 0",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
@@ -12,7 +15,13 @@
   },
   "keywords": [
     "event",
-    "pub/sub"
+    "event store",
+    "event utility",
+    "javascript",
+    "browser",
+    "node",
+    "pub/sub",
+    "publish subscribe"
   ],
   "author": "cory robinson",
   "license": "MIT",
@@ -20,8 +29,14 @@
     "url": "https://github.com/crobinson42/event-sky/issues"
   },
   "homepage": "https://github.com/crobinson42/event-sky",
-  "dependencies": {
+  "devDependencies": {
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-latest": "^6.24.1",
     "grunt": "^0.4.5",
-    "grunt-contrib-uglify": "^0.9.1"
+    "grunt-contrib-uglify": "^0.9.1",
+    "rollup": "^0.41.6",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-json": "^2.1.1",
+    "semantic-release": "^6.3.2"
   }
 }
