--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c --watch",
-    "test": "echo \"Test: no test specified\" && exit 0",
+    "test": "jest --config=test/jest.config.json",
+    "test:watch": "jest --config=test/jest.config.json --watch",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
@@ -14,7 +15,10 @@
     "url": "https://github.com/crobinson42/event-sky.git"
   },
   "keywords": [
-    "event",
+    "events",
+    "javascript events",
+    "js events",
+    "es6 events",
     "event store",
     "event utility",
     "javascript",
@@ -30,13 +34,37 @@
   },
   "homepage": "https://github.com/crobinson42/event-sky",
   "devDependencies": {
+    "babel-jest": "^19.0.0",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
+    "browser-sync": "^2.18.8",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jest": "^19.0.1",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "grunt": "^0.4.5",
     "grunt-contrib-uglify": "^0.9.1",
+    "jest": "^19.0.2",
+    "jest-babel-preprocessor": "^0.3.0",
+    "jest-cli": "^19.0.2",
+    "regenerator-runtime": "^0.10.3",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-json": "^2.1.1",
-    "semantic-release": "^6.3.2"
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-watch": "^3.2.2",
+    "semantic-release": "^6.3.2",
+    "sinon": "^2.1.0"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/jest-babel-preprocessor/preprocessor.js",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react"
+    ]
   }
 }
