--- a/src/.babelrc
+++ b/src/.babelrc
@@ -6,5 +6,8 @@
       }
     }]
   ],
-  "plugins": ["external-helpers"]
+  "plugins": ["external-helpers", "transform-object-rest-spread"],
+  "env": {
+    "jest/globals": true
+  }
 }
