--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-json": "^2.1.1",
     "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^1.0.1",
     "rollup-watch": "^3.2.2",
     "semantic-release": "^6.3.2",
     "sinon": "^2.1.0"
