--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-jest": "^19.0.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "browser-sync": "^2.18.8",
     "eslint": "^3.19.0",
