--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "event-sky",
   "version": "0.0.0-development",
+  "publishConfig": {"tag": "next"},
   "description": "front-end event pub/sub utility",
   "main": "build.js",
   "scripts": {
