--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "event-sky",
   "version": "0.0.0-development",
   "publishConfig": {"tag": "next"},
+  "release": {
+    "debug": false,
+    "branch": "develop"
+  },
   "description": "front-end event pub/sub utility",
   "main": "build.js",
   "scripts": {
