--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "event-sky",
   "version": "0.0.0-development",
-  "publishConfig": {"tag": "next"},
+  "publishConfig": {
+    "tag": "next"
+  },
   "release": {
     "branch": "develop"
   },
@@ -42,8 +44,10 @@
     "babel-jest": "^19.0.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-latest": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
     "browser-sync": "^2.18.8",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.0",
