--- a/src/.babelrc
+++ b/src/.babelrc
@@ -6,7 +6,10 @@
       }
     ]
   ],
-  "plugins": ["external-helpers", "transform-object-rest-spread"],
+  "plugins": [
+    "transform-runtime",
+    "transform-object-rest-spread"
+  ],
   "env": {
     "jest/globals": true
   }
