--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "release": {
     "branch": "develop"
   },
-  "description": "front-end event pub/sub utility",
+  "description": "javascript event pub/sub utility",
   "main": "build.js",
   "scripts": {
     "build": "rollup -c",
@@ -41,6 +41,7 @@
   },
   "homepage": "https://github.com/crobinson42/event-sky",
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
     "babel-jest": "^19.0.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -48,6 +49,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "browser-sync": "^2.18.8",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.0",
